Сделан GET метод для users